# phr

./: .env  Cargo.toml  diesel.toml
backend/: Cargo.toml
backend/migrations/2020-05-10-023611_initial_schema/: down.sql
backend/migrations/2020-05-10-162118_unique_username/: down.sql  up.sql
backend/migrations/2020-05-11-225729_enum_reason/: up.sql
backend/migrations/2020-05-17-195104_rename_user_to_driver/: down.sql  up.sql
backend/src/: api.rs  lib.rs  model.rs  parser.rs  schema.patch  schema.rs
frontend/: .gitignore  Cargo.toml  build.rs  x.sh
frontend/src/: api.rs  lib.rs
frontend/src/routes/: index.rs  mod.rs  racer.rs  racers.rs
frontend/static/: index.html
migrations/2020-05-10-023611_initial_schema/: up.sql
migrations/2020-05-10-054846_add_race_date/: down.sql  up.sql
migrations/2020-05-10-055551_fps_locked_nonnull/: down.sql  up.sql
migrations/2020-05-11-225729_enum_reason/: down.sql
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: api.rs  lib.rs  model.rs  parser.rs  schema.patch  schema.rs
