[package]
name = "phc-stats"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["chrono", "mysql"] }
dotenv = "0.15.0"
