[package]
name = "phc-stats"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["chrono", "mysql"] }
diesel-derive-enum = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.15.0"
juniper = { version = "0.14.2", default-features = false, features = ["chrono"] }
scan_fmt = "0.2.5"
select = "0.4.3"

[dev-dependencies]
flate2 = "1.0.14"
tar = "0.4.26"
