[package]
name = "phr-backend"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
diesel-derive-enum = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.15.0"
http = "0.1.21"
juniper = { version = "0.14.2", default-features = false, features = ["chrono"] }
juniper_warp = "0.5.2"
scan_fmt = "0.2.5"
select = "0.4.3"
warp = "0.1.22"

[dev-dependencies]
flate2 = "1.0.14"
tar = "0.4.26"
