[package]
name = "phr-backend"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
diesel-derive-enum = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.15.0"
juniper = { version = "0.14.2", default-features = false, features = ["chrono"] }
juniper_warp = "0.5.2"
scan_fmt = "0.2.5"
select = "0.4.3"
serde_json = "1.0.53"
warp = "0.1.22"

[dev-dependencies]
flate2 = "1.0.14"
tar = "0.4.26"
