[package]
name = "phr-frontend"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graphql_client = "0.9.0"
serde = "1.0.110"
wasm-bindgen = "0.2.62"
yew = "0.16.0"
yew-router = "0.13.0"

[build-dependencies]
anyhow = "1.0.28"
phr-backend = { path = "../backend", version = "0.1.0" }
