[package]
name = "phr-server"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
juniper_warp = "0.5.2"
phr-backend = { path = "../backend", version = "0.1.0" }
dotenv = "0.15.0"
warp = "0.1.22"
